--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css?_v=20240423013128' rel='stylesheet'>
-    <link rel="stylesheet" href="css/style.min.css?_v=20240423013128">
-    <title>Resume</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css?_v=20240423140401' rel='stylesheet'>
+    <link rel="stylesheet" href="css/style.min.css?_v=20240423140401">
+    <title>Моє резюме</title>
 </head>
 
 <body>
@@ -28,6 +28,11 @@
             </li>
             <li class="header__item">
                 <a class="header__link" data-link="3" href="">
+                    <i class='bx bx-spreadsheet'></i>
+                </a>
+            </li>
+            <li class="header__item">
+                <a class="header__link" data-link="4" href="">
                     <i class='bx bxs-contact' ></i>
                 </a>
             </li>
@@ -63,6 +68,11 @@
                         </li>
                         <li class="header-lite__item">
                             <a class="header-lite__link" data-link="3" href="">
+                                <i class='bx bx-spreadsheet'></i>
+                            </a>
+                        </li>
+                        <li class="header-lite__item">
+                            <a class="header-lite__link" data-link="4" href="">
                                 <i class='bx bxs-contact' ></i>
                             </a>
                         </li>
@@ -90,7 +100,7 @@
                             веб-сайт з яскравими анімаціями, який просто захоплює своєю красою та функціональністю.
                         </p>
                         <div class="home__buttons" data-links-list>
-                            <button class="home__btn button" data-link="3">Зв'язатися зі мною</button>
+                            <button class="home__btn button" data-link="4">Зв'язатися зі мною</button>
                             <button class="home__btn button-border" data-link="2">Резюме</button> 
                             <div data-link="1"></div>
                         </div>
@@ -112,7 +122,85 @@
                             прагнення - досягнення високої якості в кожному аспекті моєї роботи.</p>
                     </div>
                 </section>
-                <section class="contact block" data-block="3">  
+                <section class="projects block" data-block="3">
+    <h3 class="projects__title">Мої проекти</h3>
+    <div class="projects__blocks">
+        <div class="projects__block">
+            <div class="projects__media">
+                <img src="img/projects/image4.png" />
+            </div>
+            <h3 class="projects__name"></h3>
+            <a class="projects__link" href="https://olecsandr009.github.io/SMART-prog/">
+                <i class='bx bx-link-external'></i>
+            </a>
+        </div>
+        <div class="projects__block">
+            <div class="projects__media">
+                <img src="img/projects/image2.png" />
+            </div>
+            <h3 class="projects__name"></h3>
+            <a class="projects__link" href="https://olecsandr009.github.io/stan-s-assets/">
+                <i class='bx bx-link-external'></i>
+            </a>
+        </div>
+        <div class="projects__block">
+            <div class="projects__media">
+                <img src="img/projects/image3.png" />
+            </div>
+            <h3 class="projects__name"></h3>
+            <a class="projects__link" href="https://olecsandr009.github.io/animation/">
+                <i class='bx bx-link-external'></i>
+            </a>
+        </div>
+        <div class="projects__block">
+            <div class="projects__media">
+                <img src="img/projects/image5.png" />
+            </div>
+            <h3 class="projects__name"></h3>
+            <a class="projects__link" href="https://olecsandr009.github.io/fire-money/">
+                <i class='bx bx-link-external'></i>
+            </a>
+        </div>
+        <div class="projects__block">
+            <div class="projects__media">
+                <img src="img/projects/image6.png" />
+            </div>
+            <h3 class="projects__name"></h3>
+            <a class="projects__link" href="https://olecsandr009.github.io/DeliverX/">
+                <i class='bx bx-link-external'></i>
+            </a>
+        </div>
+        <div class="projects__block">
+            <div class="projects__media">
+                <img src="img/projects/image7.png" />
+            </div>
+            <h3 class="projects__name"></h3>
+            <a class="projects__link" href="https://olecsandr009.github.io/level-fitnes/">
+                <i class='bx bx-link-external'></i>
+            </a>
+        </div>
+        <div class="projects__block">
+            <div class="projects__media">
+                <img src="img/projects/image8.png" />
+            </div>
+            <h3 class="projects__name"></h3>
+            <a class="projects__link" href="https://olecsandr009.github.io/cleopartner/">
+                <i class='bx bx-link-external'></i>
+            </a>
+        </div>
+        <div class="projects__block">
+            <div class="projects__media">
+                <img src="img/projects/image9.png" />
+            </div>
+            <h3 class="projects__name"></h3>
+            <a class="projects__link" href="https://olecsandr009.github.io/sayt/">
+                <i class='bx bx-link-external'></i>
+            </a>
+        </div>
+        <div class="projects__block"></div>
+    </div>
+</section>
+                <section class="contact block" data-block="4">  
                     <div class="contact__content">
                         <h2 class="contact__title title">Зв'язатися зі мною</h2>
                         <form class="contact__form">
@@ -245,7 +333,7 @@
         <div class="shadow" data-popup-shadow="1"></div>
 	</div>
 
-	<script src="js/app.min.js?_v=20240423013128"></script>
+	<script src="js/app.min.js?_v=20240423140401"></script>
 </body>
 
 </html>
