--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="projects__blocks">
         <div class="projects__block">
             <div class="projects__media">
-                <img src="img/projects/image4.png" />
+                <img src="img/image4.png" />
             </div>
             <h3 class="projects__name"></h3>
             <a class="projects__link" href="https://olecsandr009.github.io/SMART-prog/">
@@ -136,7 +136,7 @@
         </div>
         <div class="projects__block">
             <div class="projects__media">
-                <img src="img/projects/image2.png" />
+                <img src="img/image2.png" />
             </div>
             <h3 class="projects__name"></h3>
             <a class="projects__link" href="https://olecsandr009.github.io/stan-s-assets/">
@@ -145,7 +145,7 @@
         </div>
         <div class="projects__block">
             <div class="projects__media">
-                <img src="img/projects/image3.png" />
+                <img src="img/image3.png" />
             </div>
             <h3 class="projects__name"></h3>
             <a class="projects__link" href="https://olecsandr009.github.io/animation/">
@@ -154,7 +154,7 @@
         </div>
         <div class="projects__block">
             <div class="projects__media">
-                <img src="img/projects/image5.png" />
+                <img src="img/image5.png" />
             </div>
             <h3 class="projects__name"></h3>
             <a class="projects__link" href="https://olecsandr009.github.io/fire-money/">
@@ -163,7 +163,7 @@
         </div>
         <div class="projects__block">
             <div class="projects__media">
-                <img src="img/projects/image6.png" />
+                <img src="img/image6.png" />
             </div>
             <h3 class="projects__name"></h3>
             <a class="projects__link" href="https://olecsandr009.github.io/DeliverX/">
@@ -172,7 +172,7 @@
         </div>
         <div class="projects__block">
             <div class="projects__media">
-                <img src="img/projects/image7.png" />
+                <img src="img/image7.png" />
             </div>
             <h3 class="projects__name"></h3>
             <a class="projects__link" href="https://olecsandr009.github.io/level-fitnes/">
@@ -181,7 +181,7 @@
         </div>
         <div class="projects__block">
             <div class="projects__media">
-                <img src="img/projects/image8.png" />
+                <img src="img/image8.png" />
             </div>
             <h3 class="projects__name"></h3>
             <a class="projects__link" href="https://olecsandr009.github.io/cleopartner/">
@@ -190,7 +190,7 @@
         </div>
         <div class="projects__block">
             <div class="projects__media">
-                <img src="img/projects/image9.png" />
+                <img src="img/image9.png" />
             </div>
             <h3 class="projects__name"></h3>
             <a class="projects__link" href="https://olecsandr009.github.io/sayt/">
